--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "sirv": "--host 3.0.0.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.2",
+    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "sirv-cli": "^2.0.0"
   }
 }
