done pagination and search

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,5 +19,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": [
+    "src",
+    "types/express.d.ts"
+  ]
 }
