--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.19.2",
+		"multer": "^1.4.5-lts.1"
+	}
 }
