--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.5.2",
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"multer": "^1.4.5-lts.1"
